# european-tech-internships-2025

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.template.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yml  internships_table.md  justfile  newgrads_table.md  setup  setup.sh  table.md
.github/scripts/: render.py
.github/workflows/: update_results.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  app.py  backend.py  db.py  pyproject.toml  requirements.txt
backend/earlycareers/: api.py  crud.py  deps.py  main.py  models.py  schemas.py
backend/earlycareers/core/: config.py  database.py
contribute/: indeed.txt  lines.txt  linkedin.txt
fixed/: graduate_programs.md  others.md  phds.md
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  biome.json  components.json  index.html  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  app.css  app.d.ts  hooks.server.ts  index.css  main.tsx  routeTree.gen.ts
frontend/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/client/client/: client.ts  types.ts
frontend/src/client/core/: bodySerializer.ts  params.ts
frontend/src/components/: Table.svelte  advanced-search-form.tsx  data-table-pagination.tsx  header.tsx  job-advanced-search-form.tsx  job-search-form.tsx  job-table-skeleton.tsx  job-table.tsx  not-found.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx  input.tsx  select.tsx  switch.tsx  table.tsx  toast.tsx  toaster.tsx
frontend/src/hooks/: use-advanced-jobs.ts  use-jobs-query.ts  use-pagination.ts  use-toast.ts
frontend/src/lib/: api.ts  index.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +pages.svelte  __root.tsx  advanced.tsx  jobs.tsx
frontend/src/routes/_layout/: index.tsx
frontend/src/routes/table/: +page.server.ts  +page.svelte
scraped/: internships_table.md
